--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "author": "Barão - @fghbittencourt",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "yarn ts-node-dev --clear --inspect --transpile-only --ignore node_modules -r dotenv/config src/index.ts service:",
@@ -12,6 +16,12 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^12.0.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.0.4",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^13.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.12.8",
@@ -38,6 +48,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "reflect-metadata": "^0.1.13",
+    "semantic-release": "^23.1.1",
     "tsyringe": "^4.6.0",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
