--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
   "name": "node-clean-arch-barao",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "author": "Barão - @fghbittencourt",
+  "packageManager": "pnpm@9.3.0",
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "yarn ts-node-dev --clear --inspect --transpile-only --ignore node_modules -r dotenv/config src/index.ts service:",
+    "build": "swc ./src -d ./dist",
+    "dev": "pnpm ts-node-dev --clear --inspect --transpile-only --ignore node_modules -r dotenv/config src/index.ts service:",
     "start": "node ./src/index.js --optimize_for_size --max-semi-space-size=2048 --max-old-space-size=2048",
     "test:unit": "jest --silent --maxWorkers=2"
+  },
+  "dependencies": {
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
+    "express-validator": "^6.12.1",
+    "reflect-metadata": "^0.1.13",
+    "semantic-release": "^23.1.1",
+    "tsyringe": "^4.6.0",
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -40,17 +52,9 @@
     "prettier": "^2.3.2",
     "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.3"
-  },
-  "dependencies": {
-    "class-validator": "^0.14.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.17.1",
-    "express-validator": "^6.12.1",
-    "reflect-metadata": "^0.1.13",
-    "semantic-release": "^23.1.1",
-    "tsyringe": "^4.6.0",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "typescript": "^4.8.3",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.5.25",
+    "@swc/jest": "^0.2.36"
   }
 }
