--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "strict": true,
     "useUnknownInCatchVariables": false,
     "typeRoots": ["./types", "./node_modules/@types"],
-    "types": ["node", "reflect-metadata", "jest"],
+    "types": ["node", "jest"],
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
