--- a/package.json
+++ b/package.json
@@ -16,30 +16,35 @@
     "test:unit": "jest --silent --maxWorkers=2"
   },
   "dependencies": {
-    "class-validator": "^0.14.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.17.1",
-    "express-validator": "^6.12.1",
-    "reflect-metadata": "^0.1.13",
-    "semantic-release": "^23.1.1",
-    "tsyringe": "^4.6.0",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-validator": "^7.1.0",
+    "reflect-metadata": "^0.2.2",
+    "semantic-release": "^24.0.0",
+    "tsyringe": "^4.8.0",
+    "uuid": "^10.0.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.5.0",
+    "@faker-js/faker": "^8.4.1",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^12.0.0",
+    "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^10.0.4",
+    "@semantic-release/github": "^10.0.6",
     "@semantic-release/npm": "^12.0.1",
-    "@semantic-release/release-notes-generator": "^13.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^20.12.8",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
+    "@semantic-release/release-notes-generator": "^14.0.0",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.6.1",
+    "@swc/jest": "^0.2.36",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.2",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -48,13 +53,10 @@
     "eslint-plugin-json": "^3.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "fishery": "^2.2.2",
-    "jest": "^29.5.0",
-    "prettier": "^2.3.2",
-    "ts-jest": "^29.0.5",
+    "jest": "^29.7.0",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.3",
-    "@swc/cli": "^0.3.12",
-    "@swc/core": "^1.5.25",
-    "@swc/jest": "^0.2.36"
+    "typescript": "^5.4.5"
   }
 }
