--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,10 @@ services:
       context: .
       dockerfile: ./docker/Dockerfile
     env_file: .env
+    environment:
+      APP_NAME: webapi
     ports:
-      - 4600:4600
+      - 4500:4500
 
   tests:
     container_name: tests
