--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "fishery": "^2.2.2",
     "jest": "^29.7.0",
     "prettier": "^2.8.8",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
