--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "scripts": {
     "build": "swc ./src -d ./dist",
-    "start": "node ./src/index.js --optimize_for_size --max-semi-space-size=2048 --max-old-space-size=2048",
-    "start:dist": "node ./dist/src/index.js --optimize_for_size --max-semi-space-size=2048 --max-old-space-size=2048",
-    "dev:webapi": "pnpm ts-node-dev --clear --inspect --transpile-only --ignore node_modules -r dotenv/config src/index.ts webapi",
-    "test:unit": "jest --silent --maxWorkers=2"
+    "start": "node ./src/index.js",
+    "start:dist": "node ./dist/src/index.js",
+    "dev:webapi": "nodemon --exec swc-node ./src/index.ts webapi",
+    "test": "jest --silent --maxWorkers=2"
   },
   "dependencies": {
     "class-validator": "^0.14.1",
@@ -55,10 +55,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "fishery": "^2.2.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
     "prettier": "^2.8.8",
     "supertest": "^7.0.0",
+    "swc-node": "^1.0.0",
     "ts-jest": "^29.1.5",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
 }
