feat: application layer for makeBooking (#11)
* chore: fix makefiles

* chore: remove unnused ref reflect-metadata

* chore: webapp configuration running and healthcheck

* chore: fix TS and port references

* chore: fix ts module resolution

* feat: change reservation to emit tickets

* feat: add dummy messenger handlers to bootstrap

* feat: add application layer for make booking

* chore: fix tests and refs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 /* Visit https://aka.ms/tsconfig.json to read more about this file */
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
+    "target": "es2022",
+    "module": "es2022",
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
@@ -13,7 +13,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "Node"
   },
   "include": ["src"],
   "exclude": ["tests"]
