--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "supertest": "^7.0.0",
     "swc-node": "^1.0.0",
     "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
