--- a/package.json
+++ b/package.json
@@ -46,20 +46,19 @@
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-json": "^3.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-perfectionist": "^2.11.0",
     "fishery": "^2.2.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
-    "prettier": "^2.8.8",
     "supertest": "^7.0.0",
     "swc-node": "^1.0.0",
     "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
