--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "test": "jest --silent --maxWorkers=2"
   },
   "dependencies": {
+    "@fastify/helmet": "^11.1.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-validator": "^7.1.0",
+    "fastify": "^4.28.0",
     "reflect-metadata": "^0.2.2",
     "semantic-release": "^24.0.0",
     "tsyringe": "^4.8.0",
@@ -39,7 +39,6 @@
     "@swc/cli": "^0.3.12",
     "@swc/core": "^1.6.1",
     "@swc/jest": "^0.2.36",
-    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.2",
     "@types/uuid": "^9.0.8",
