--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-perfectionist": "^2.11.0",
     "fishery": "^2.2.2",
     "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0",
     "swc-node": "^1.0.0",
