--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,19 @@
 {
   "compilerOptions": {
     "target": "es2022",
-    "module": "es2022",
+    "module": "commonjs",
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
     "useUnknownInCatchVariables": false,
-    "typeRoots": ["./types", "./node_modules/@types"],
-    "types": ["node", "jest"],
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types"
+    ],
+    "types": [
+      "node",
+      "jest"
+    ],
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
@@ -16,6 +22,10 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "Node"
   },
-  "include": ["src"],
-  "exclude": ["tests"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "tests"
+  ]
 }
