chore: fix migrations

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,10 @@ QUEUE_EMIT_TICKETS=
 TOPIC_BOOKINGS=
 
 DB_ENGINE=dummy
+
+DB_POSTGRES_TYPE=postgres
+DB_POSTGRES_USER=root
+DB_POSTGRES_PASSWORD=password1234
+DB_POSTGRES_HOST=localhost
+DB_POSTGRES_PORT=5432
+DB_POSTGRES_NAME=node_clean_arch
