--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "start": "node ./src/index.js",
     "start:dist": "node ./dist/src/index.js",
     "dev:webapi": "nodemon --exec swc-node ./src/index.ts webapi",
-    "migration:create": "typeorm-ts-node-esm migration:create src/repositories/postgres/migrations/change-my-name",
+    "migration:create": "typeorm-ts-node-esm migration:create --dataSource ./src/repositories/postgres/appDataSource.ts src/repositories/postgres/migrations/change-my-name",
     "migration:generate": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:generate --dataSource ./src/repositories/postgres/appDataSource.ts src/repositories/postgres/migrations/change-my-name",
     "migration:run": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:run --dataSource ./src/repositories/postgres/appDataSource.ts",
-    "migration:revert": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:revert --dataSource ./src/repositories/postgres/appDataSource.ts",
+    "migration:revertLast": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:revert --dataSource ./src/repositories/postgres/appDataSource.ts",
+    "migration:show": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:show --dataSource ./src/repositories/postgres/appDataSource.ts",
     "test": "jest --silent --maxWorkers=2"
   },
   "dependencies": {
