feat: type orm example (#23)
* chore: add typeorm and repos

* chore: migration and migration config

* chore: fix migrations

* feat: entityschema for booking and passenger

* feat: make middleware work for nested members

* feat: add passenger entity and fix uc and tests

--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "start": "node ./src/index.js",
     "start:dist": "node ./dist/src/index.js",
     "dev:webapi": "nodemon --exec swc-node ./src/index.ts webapi",
+    "migration:create": "typeorm-ts-node-esm migration:create --dataSource ./src/repositories/postgres/appDataSource.ts src/repositories/postgres/migrations/change-my-name",
+    "migration:generate": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:generate --dataSource ./src/repositories/postgres/appDataSource.ts src/repositories/postgres/migrations/change-my-name",
+    "migration:run": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:run --dataSource ./src/repositories/postgres/appDataSource.ts",
+    "migration:revertLast": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:revert --dataSource ./src/repositories/postgres/appDataSource.ts",
+    "migration:show": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:show --dataSource ./src/repositories/postgres/appDataSource.ts",
     "test": "jest --silent --maxWorkers=2"
   },
   "dependencies": {
@@ -22,10 +27,13 @@
     "@fastify/swagger-ui": "^4.0.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.0",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "semantic-release": "^24.0.0",
     "snakecase-keys": "^8.0.1",
     "tsyringe": "^4.8.0",
+    "typeorm": "^0.3.20",
+    "typeorm-naming-strategies": "^4.1.0",
     "uuid": "^10.0.0",
     "winston": "^3.13.0",
     "zod": "^3.23.8",
