--- a/.env.sample
+++ b/.env.sample
@@ -2,5 +2,13 @@ NODE_ENV=development
 LOG_LEVEL=debug
 
 QUEUE_EMIT_TICKETS=
-
 TOPIC_BOOKINGS=
+
+DB_ENGINE=dummy
+
+DB_POSTGRES_TYPE=postgres
+DB_POSTGRES_USER=root
+DB_POSTGRES_PASSWORD=password1234
+DB_POSTGRES_HOST=localhost
+DB_POSTGRES_PORT=5432
+DB_POSTGRES_NAME=node_clean_arch
