chore: lint on ci

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -54,5 +54,8 @@ jobs:
     - name: Install dependencies
       run: pnpm install
 
+    - name: Run lint
+      run: pnpm eslint .
+
     - name: Run tests
       run: pnpm test
