chore: add kafka sender and remove publisher class, making the message sender more simple

--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,7 @@ LOG_LEVEL=debug
 QUEUE_EMIT_TICKETS=
 TOPIC_BOOKINGS=
 
+APP_NAME=node-clean-arch
 DB_ENGINE=dummy
 
 DB_POSTGRES_TYPE=postgres
@@ -12,3 +13,7 @@ DB_POSTGRES_PASSWORD=password1234
 DB_POSTGRES_HOST=localhost
 DB_POSTGRES_PORT=5432
 DB_POSTGRES_NAME=node_clean_arch
+
+EVENT_SOURCE_PREFIX=some-domain
+KAFKA_BROKERS=localhost:9092
+KAFKA_GROUP_ID=node-clean-arch
