--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fastify/swagger-ui": "^4.0.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.0",
+    "kafkajs": "^2.2.4",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "semantic-release": "^24.0.0",
