chore: add kafka consumer

--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,14 @@
 NODE_ENV=development
 LOG_LEVEL=debug
 
-QUEUE_EMIT_TICKETS=
-TOPIC_BOOKINGS=
+TOPIC_EMIT_TICKETS=emit.tickets.topic
+TOPIC_BOOKINGS=bookings.topic
 
+ASYNC_HC_PORT=4501
 APP_NAME=node-clean-arch
+APP_TYPE=webapi # webapi | worker
 DB_ENGINE=dummy
+MESSAGE_SENDER=dummy
 
 DB_POSTGRES_TYPE=postgres
 DB_POSTGRES_USER=root
@@ -15,5 +18,5 @@ DB_POSTGRES_PORT=5432
 DB_POSTGRES_NAME=node_clean_arch
 
 EVENT_SOURCE_PREFIX=some-domain
-KAFKA_BROKERS=localhost:9092
+KAFKA_BROKERS=localhost:19092
 KAFKA_GROUP_ID=node-clean-arch
