--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "swc ./src -d ./dist",
     "start": "node ./src/index.js",
     "start:dist": "node ./dist/src/index.js",
-    "dev:webapi": "nodemon --exec swc-node ./src/index.ts webapi",
+    "dev:webapi": "nodemon --exec swc-node ./src/index.ts webapi nca-api",
+    "dev:worker": "nodemon --exec swc-node ./src/index.ts worker nca-worker",
     "migration:create": "typeorm-ts-node-esm migration:create --dataSource ./src/repositories/postgres/appDataSource.ts src/repositories/postgres/migrations/change-my-name",
     "migration:generate": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:generate --dataSource ./src/repositories/postgres/appDataSource.ts src/repositories/postgres/migrations/change-my-name",
     "migration:run": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:run --dataSource ./src/repositories/postgres/appDataSource.ts",
