--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fastify": "^4.28.0",
     "kafkajs": "^2.2.4",
     "pg": "^8.12.0",
+    "promise-retry": "^2.0.1",
     "reflect-metadata": "^0.2.2",
     "semantic-release": "^24.0.0",
     "snakecase-keys": "^8.0.1",
@@ -56,6 +57,7 @@
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.2",
+    "@types/promise-retry": "^1.1.6",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
