chore: add variables to kafka config

--- a/.env.sample
+++ b/.env.sample
@@ -20,3 +20,6 @@ DB_POSTGRES_NAME=node_clean_arch
 EVENT_SOURCE_PREFIX=some-domain
 KAFKA_BROKERS=localhost:19092
 KAFKA_GROUP_ID=node-clean-arch
+KAFKA_CONNECTION_TIMEOUT=
+KAFKA_REQUEST_TIMEOUT=
+KAFKA_PRODUCER_TIMEOUT=
