chore: add conditional for hc

--- a/.env.sample
+++ b/.env.sample
@@ -23,3 +23,4 @@ KAFKA_GROUP_ID=node-clean-arch
 KAFKA_CONNECTION_TIMEOUT=
 KAFKA_REQUEST_TIMEOUT=
 KAFKA_PRODUCER_TIMEOUT=
+KAFKA_WORKER_HEALTH_CHECK=true
