chore: remove groupId

--- a/.env.sample
+++ b/.env.sample
@@ -8,7 +8,7 @@ ASYNC_HC_PORT=4501
 APP_NAME=node-clean-arch
 APP_TYPE=webapi # webapi | worker
 DB_ENGINE=dummy
-MESSAGE_SENDER=dummy
+MESSAGE_SENDER=dummy # dummy | kafka
 
 DB_POSTGRES_TYPE=postgres
 DB_POSTGRES_USER=root
