chore: kafka pub consumer (#28)
* chore: add redpanda to docker compose

* chore: adjusts on make docker files

* chore: fix docker compose

* chore: add kafka sender and remove publisher class, making the message sender more simple

* chore: add kafka consumer

* chore: consumer kafka

* chore: add retry

* chore: pnpm version

* chore: kafka retry

* chore: add no parallelism option

* chore: add no parallelism option

* chore: adapt sender to be part of consumer

* add missing parameters on options

* chore: fixed process termination issues

* refactor: remove unnecessary features, simplify code

* chore: add variables to kafka config

* chore: add conditional for hc

* test: kafka message processor

* chore: add messageType on messages

* chore: remove groupId

* test: makeBooking test fix

* chore: opts

* chore: put parameters to read from env vars

* chore: remove unnecessary files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "author": "Barão - @fghbittencourt",
-  "packageManager": "pnpm@9.3.0",
+  "packageManager": "pnpm@9.6.0",
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
@@ -13,7 +13,8 @@
     "build": "swc ./src -d ./dist",
     "start": "node ./src/index.js",
     "start:dist": "node ./dist/src/index.js",
-    "dev:webapi": "nodemon --exec swc-node ./src/index.ts webapi",
+    "dev:webapi": "nodemon --exec swc-node ./src/index.ts webapi nca-api",
+    "dev:worker": "nodemon --exec swc-node ./src/index.ts worker nca-worker",
     "migration:create": "typeorm-ts-node-esm migration:create --dataSource ./src/repositories/postgres/appDataSource.ts src/repositories/postgres/migrations/change-my-name",
     "migration:generate": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:generate --dataSource ./src/repositories/postgres/appDataSource.ts src/repositories/postgres/migrations/change-my-name",
     "migration:run": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:run --dataSource ./src/repositories/postgres/appDataSource.ts",
@@ -27,7 +28,9 @@
     "@fastify/swagger-ui": "^4.0.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.0",
+    "kafkajs": "^2.2.4",
     "pg": "^8.12.0",
+    "promise-retry": "^2.0.1",
     "reflect-metadata": "^0.2.2",
     "semantic-release": "^24.0.0",
     "snakecase-keys": "^8.0.1",
@@ -54,6 +57,7 @@
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.2",
+    "@types/promise-retry": "^1.1.6",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
