--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,14 @@
 NODE_ENV=development
 LOG_LEVEL=debug
 
-QUEUE_EMIT_TICKETS=
-TOPIC_BOOKINGS=
+TOPIC_EMIT_TICKETS=emit.tickets.topic
+TOPIC_BOOKINGS=bookings.topic
 
+ASYNC_HC_PORT=4501
+APP_NAME=node-clean-arch
+APP_TYPE=webapi # webapi | worker
 DB_ENGINE=dummy
+MESSAGE_SENDER=dummy # dummy | kafka
 
 DB_POSTGRES_TYPE=postgres
 DB_POSTGRES_USER=root
@@ -12,3 +16,11 @@ DB_POSTGRES_PASSWORD=password1234
 DB_POSTGRES_HOST=localhost
 DB_POSTGRES_PORT=5432
 DB_POSTGRES_NAME=node_clean_arch
+
+EVENT_SOURCE_PREFIX=some-domain
+KAFKA_BROKERS=localhost:19092
+KAFKA_GROUP_ID=node-clean-arch
+KAFKA_CONNECTION_TIMEOUT=
+KAFKA_REQUEST_TIMEOUT=
+KAFKA_PRODUCER_TIMEOUT=
+KAFKA_WORKER_HEALTH_CHECK=true
